// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 只有主标题的CardHeader 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm eSyBnn"
=======
  className="CardHeader__CardHeaderWrapper-sc-3c49dw-0 lcGMih"
>>>>>>> origin/bottomNavigation
>
  <div
    className="card-header-content"
  >
    <div
<<<<<<< HEAD
      className="sc-AxirZ hBVueb"
=======
      className="CardHeader__CardHeaderTitle-sc-3c49dw-1 lkPuvY"
>>>>>>> origin/bottomNavigation
    >
      Shrimp and Chorizo Paella
    </div>
  </div>
</div>
`;

exports[`快照测试 头像+主标题+副标题+操作的CardHeader 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm eSyBnn"
=======
  className="CardHeader__CardHeaderWrapper-sc-3c49dw-0 lcGMih"
>>>>>>> origin/bottomNavigation
>
  <div
    className="card-header-avatar"
  />
  <div
    className="card-header-content"
  >
    <div
      className="card-header-title"
    >
      Shrimp and Chorizo Paella
    </div>
    <div
      className="card-header-subheader"
    >
      subheader
    </div>
  </div>
  <div
    className="card-header-action"
  >
    <span>
      icon
    </span>
  </div>
</div>
`;
